# AvaliacaoDesempenhoRust

./: README.md
EMBASSY/canais/: Cargo.toml  embed.toml  memory.x
EMBASSY/canais/src/: main.rs
EMBASSY/interrupcao/: Cargo.toml  embed.toml
EMBASSY/interrupcao/src/: main.rs
EMBASSY/mutex/: Cargo.toml  embed.toml
EMBASSY/mutex/.cargo/: config.toml
EMBASSY/mutex/src/: main.rs
FREERTOS/acessoMemoria/: .cproject  .project  acessoMemoria Debug.launch  acessoMemoria.ioc
FREERTOS/acessoMemoria/Core/Src/: main.c
FREERTOS/acessoMemoria/Debug/: acessoMemoria.elf  acessoMemoria.list  acessoMemoria.map  makefile
FREERTOS/acessoMemoria/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32g0xx_it.su
FREERTOS/canal/: canal_2.ioc
FREERTOS/canal/Core/Src/: main.c  stm32g0xx_it.c
FREERTOS/canal/Debug/: canal_2.elf  canal_2.list  canal_2.map
FREERTOS/canal/Debug/Core/Src/: app_freertos.d  main.d  stm32g0xx_it.d
FREERTOS/canal_2/: .cproject  .mxproject  .project  canal_2 Debug.launch
FREERTOS/canal_2/Debug/: makefile
FREERTOS/canal_2/Debug/Core/Src/: main.cyclo  main.su  subdir.mk
FREERTOS/canal_2/Debug/Drivers/STM32G0xx_HAL_Driver/Src/: stm32g0xx_hal_tim_ex.d
FREERTOS/interrupcao/: .cproject  interrupcao_2.ioc
FREERTOS/interrupcao/Debug/: interrupcao_2.map  objects.list
FREERTOS/interrupcao/Debug/Core/Src/: main.cyclo
FREERTOS/interrupcao/Debug/Drivers/STM32G0xx_HAL_Driver/Src/: stm32g0xx_hal_tim.d  subdir.mk
FREERTOS/interrupcao_2/: .project  interrupcao_2 Debug.launch
FREERTOS/interrupcao_2/Core/Src/: main.c
FREERTOS/interrupcao_2/Debug/: interrupcao_2.elf  interrupcao_2.list  makefile
FREERTOS/interrupcao_2/Debug/Core/Src/: main.su
FREERTOS/mutex/: .cproject  mutex Debug.launch  mutex.ioc
FREERTOS/mutex/Core/Src/: main.c
FREERTOS/mutex/Debug/: makefile  mutex.elf  mutex.list  mutex.map
FREERTOS/mutex/Debug/Core/Src/: main.cyclo  main.su
LILOS/acessomemoria/: Cargo.toml  embed.toml
LILOS/acessomemoria/.cargo/: config.toml
LILOS/acessomemoria/src/: main.rs
LILOS/canais/: Cargo.toml  embed.toml
LILOS/canais/src/: main.rs
LILOS/interrupcao/: Cargo.toml  embed.toml
LILOS/interrupcao/src/: main.rs
LILOS/mutex/: Cargo.toml
LILOS/mutex/src/: main.rs
RTIC/channel/: Cargo.toml  embed.toml
RTIC/channel/src/: main.rs
RTIC/interrupcao/: Cargo.toml  embed.toml  memory.x
RTIC/interrupcao/src/: main.rs
RTIC/mutex/: Cargo.toml  embed.toml
RTIC/mutex/.cargo/: config.toml
RTIC/mutex/src/: main.rs
