[package]
name = "testeLed"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
stm32g0xx-hal = { version = "0.2.0", features = ["rt", "stm32g070"] }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3" #em vez de 3 tava 1
panic-halt = "0.2.0"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
heapless = { version = "0.8.0", default-features = false }


lilos = "1.2.0"





